[package]
name = "minion_msg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.1"
serde = { version = "1", default_features = false, features = ["derive"] }
postcard = { version = "0.7.3", features = ["use-std", "alloc"] }

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "serde",
]
